[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assetts/Theme/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Lobby/WaitingRoom.gd" type="Script" id=2]

[node name="WaitingRoom" type="Popup" groups=[
"waitingRoom",
]]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.160784, 0.160784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 128.0
items = [ "Player1", null, false, "Player2", null, false ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backToLobbyButton" type="Button" parent="ColorRect"]
margin_left = 832.0
margin_top = 256.0
margin_right = 1216.0
margin_bottom = 320.0
text = "Back To Lobby"

[node name="StartButton" type="Button" parent="ColorRect"]
visible = false
margin_left = 896.0
margin_top = 384.0
margin_right = 1152.0
margin_bottom = 448.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/backToLobbyButton" to="." method="_on_backToLobbyButton_pressed"]
[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_StartButton_pressed"]
